; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_itbl-ops.c_build_opcode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_itbl-ops.c_build_opcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.itbl_entry = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.itbl_entry*)* @build_opcode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @build_opcode(%struct.itbl_entry* %0) #0 {
  %2 = alloca %struct.itbl_entry*, align 8
  %3 = alloca i64, align 8
  store %struct.itbl_entry* %0, %struct.itbl_entry** %2, align 8
  %4 = load %struct.itbl_entry*, %struct.itbl_entry** %2, align 8
  %5 = getelementptr inbounds %struct.itbl_entry, %struct.itbl_entry* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.itbl_entry*, %struct.itbl_entry** %2, align 8
  %8 = getelementptr inbounds %struct.itbl_entry, %struct.itbl_entry* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @apply_range(i32 %6, i32 %9)
  store i64 %10, i64* %3, align 8
  %11 = load %struct.itbl_entry*, %struct.itbl_entry** %2, align 8
  %12 = getelementptr inbounds %struct.itbl_entry, %struct.itbl_entry* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @ITBL_ENCODE_PNUM(i32 %13)
  %15 = load i64, i64* %3, align 8
  %16 = or i64 %15, %14
  store i64 %16, i64* %3, align 8
  %17 = load i64, i64* %3, align 8
  ret i64 %17
}

declare dso_local i64 @apply_range(i32, i32) #1

declare dso_local i64 @ITBL_ENCODE_PNUM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
